fix: Modal window readability
Made a slight improvement to the success modal, text should be bigger now

--- a/css/app.css
+++ b/css/app.css
@@ -125,3 +125,7 @@ h1 {
     list-style: none;
     display: inline-block;
 }
+
+.modal-body {
+    font-size: larger;
+}
